--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "react-ts-template",
+    "name": "assignment-3-cohengmc",
     "private": true,
     "version": "1.0.0",
-    "homepage": "https://hes-e39.github.io/react-ts-template/",
+    "homepage": "https://hes-e39.github.io/assignment-3-cohengmc/",
     "type": "module",
     "scripts": {
         "dev": "vite",
